src/objects/TMN_User__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountable_Approval_Manager__c</fullName>
        <label>Accountable Approval Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountable_Manager_Mentor_Email__c</fullName>
        <label>Accountable Manager Mentor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alias_Description__c</fullName>
        <formula>Alias_Lookup__r.Alias_Description__c</formula>
        <label>Alias Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for alias. Used to set alias and related fields.</description>
        <label>Alias Lookup</label>
        <referenceTo>Alias__c</referenceTo>
        <relationshipName>TMN_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approval Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BAA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Region__c</fullName>
        <label>Business Unit Region</label>
        <picklist>
            <picklistValues>
                <fullName>NEURO-NORTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEURO-SOUTH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Hastings South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPR_Expires__c</fullName>
        <label>CPR Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Link__c</fullName>
        <description>Annual Compliance Link</description>
        <formula>&quot;http://mentor.force.com/Survey2016?id=859&amp;uid=&quot; &amp; Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Person_Type__c</fullName>
        <label>Current Person Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-hire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custodians__c</fullName>
        <label>Custodians</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_Date_Valid_From__c</fullName>
        <label>Date Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DL_Date_Valid_To__c</fullName>
        <label>Date Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DL_License_Number__c</fullName>
        <label>License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_License_State__c</fullName>
        <label>License State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date_Of_Birth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Dietitian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-Massage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woodshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productive Activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DropdownList__c</fullName>
        <label>DropdownList</label>
        <picklist>
            <picklistValues>
                <fullName>View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Soundex_Key__c</fullName>
        <externalId>true</externalId>
        <label>First Name Soundex Key</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <label>GL Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IC_Agreement_Executed_Date__c</fullName>
        <label>IC Agreement Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identity_ID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Identity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Insurance_Expires__c</fullName>
        <label>Insurance Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <picklistValues>
                <fullName>Job Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Level 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <description>By default, this will be Active for any person in the database. As time goes and the feed only puts in Active users, we&apos;ll need to update the ones in the database but are not in the feed to Inactive.</description>
        <label>Job Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Day__c</fullName>
        <description>The last day the person is considered an employee</description>
        <label>Last Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name_Soundex_Key__c</fullName>
        <externalId>true</externalId>
        <label>Last Name Soundex Key</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expires__c</fullName>
        <label>License Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Id__c</fullName>
        <label>Location Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Name for a location</description>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Employee_Id__c</fullName>
        <label>Manager Employee Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_First_Name__c</fullName>
        <formula>LEFT(Manager_Name__c,FIND(&quot; &quot;, Manager_Name__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Last_Name__c</fullName>
        <formula>RIGHT(Manager_Name__c,LEN( Manager_Name__c)-FIND(&quot; &quot;, Manager_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the person this user is a delegate for.</description>
        <label>Manager Lookup</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipName>TMN_Manager_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor_Cell_Phone__c</fullName>
        <label>Mentor Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nat_Id_Last_Four__c</fullName>
        <label>Nat_Id_Last_Four</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Username__c</fullName>
        <label>Network Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Flag__c</fullName>
        <label>Office Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location_2__c</fullName>
        <label>Office Location 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Location_PickList__c</fullName>
        <label>Office Location</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Name__c</fullName>
        <label>Organizational_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Basis__c</fullName>
        <label>Pay Basis</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Period__c</fullName>
        <label>Pay Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_City__c</fullName>
        <label>Personal City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Location__c</fullName>
        <label>Personal Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Phone__c</fullName>
        <label>Personal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Personal_Zip__c</fullName>
        <label>Personal Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Hire_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pre-Hire ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <description>Preferred first name for user</description>
        <inlineHelpText>This should be filled in if the preferred first name is different from the legal first name.</inlineHelpText>
        <label>Preferred First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Last_Name__c</fullName>
        <description>Preferred last name of the person.</description>
        <inlineHelpText>Should be filled in if the preferred last name is different from the legal last name.</inlineHelpText>
        <label>Preferred Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prf_First_Name_Soundex_Key__c</fullName>
        <description>Soundex Key for Preferred First Name</description>
        <label>Prf First Name Soundex Key</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prf_Last_Name_Soundex_Key__c</fullName>
        <label>Prf Last Name Soundex Key</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Title__c</fullName>
        <description>User created/edited field, this is different from the Job Title field. Job Title is from HR.</description>
        <label>Professional Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_String__c</fullName>
        <description>Program String associated with the user.</description>
        <label>Program String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recruiter_Email_Address__c</fullName>
        <label>Recruiter Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recruiter_Name__c</fullName>
        <label>Recruiter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAL_OT__c</fullName>
        <label>SAL_OT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The actual Salesforce account for this user.</inlineHelpText>
        <label>Salesforce User Account</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TMN_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>ServiceLine1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceLine2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceLine3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <label>Service Region</label>
        <picklist>
            <picklistValues>
                <fullName>ServiceRegion1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceRegion2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceRegion3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppress_External_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this record is updated nightly from Oracle.  If the value is true, none of the fields will update, and any changes made in SF will remain until this box is reset to false.  This flag is used for the case when a user&apos;s operating group is temporary in Force (such as CM Ludlow).</description>
        <label>Suppress External Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMN_Identity_Id__c</fullName>
        <description>changed to 600k to start</description>
        <displayFormat>{0000000}</displayFormat>
        <label>TMN_Identity_Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Teleo_ID__c</fullName>
        <externalId>true</externalId>
        <label>Taleo ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Termination_Date_Modified_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination Date Modified Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>For now, this will be a duplicate of the Employee Id from Oracle. At some point, this will probably be a value that is unique for both employees and non-employees.</description>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor_Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_list__c</fullName>
        <label>Vendor_list</label>
        <picklist>
            <picklistValues>
                <fullName>ACCOUNTEMPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEHAVIORAL STAFFING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLETE STAFFING SOLUTIONS, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELTA-T GROUP MASSACHUSETTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST COAST MEDICAL BILLING CONSULTANTS LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELITE STAFFING, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAWKINS POINT PARTNERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSIGHT GLOBAL, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEGRATED EMPLOYER SOLUTIONS, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTREPID SERVICES, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J &amp; J STAFFING RESOURCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JW MICHAELS &amp; CO.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KELLY SERVICES, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENNISON AND ASSOCIATES INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIMCO STAFFING SERVICES, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KROLL, BECKER &amp; WING, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LABUR PROFESSIONAL STAFFING, LLC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAL PROFESSIONALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONUMENT DATA SOLUTIONS LLC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NINESTONE CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE TEAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REHABILITATION ASSOCIATES MEDICAL GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPHERION STAFFING, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAFFING PLUS, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE NAGLER GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US EDGE, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINTER, WYMAN HR CONTRACT SOLUTION INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORKFORCE WALKER PERSONEL, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_City__c</fullName>
        <label>Work City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_County__c</fullName>
        <label>Work County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_State_Code__c</fullName>
        <formula>RIGHT( Work_State__c , 2)</formula>
        <label>Work State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_State__c</fullName>
        <label>Work State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Street__c</fullName>
        <label>Work Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <label>fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>other_Vendor_name__c</fullName>
        <label>other_Vendor_name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_ext__c</fullName>
        <label>phone_ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>TMNAccess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Current_Person_Type__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Salesforce_User_Account__c</columns>
        <columns>Email__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Work_State__c</columns>
        <columns>Hire_Date__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Camb</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Salesforce_User_Account__c</columns>
        <columns>Email__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Work_State__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operating_Group__c</field>
            <operation>startsWith</operation>
            <value>Camb</value>
        </filters>
        <label>Camb</label>
    </listViews>
    <listViews>
        <fullName>Care</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Salesforce_User_Account__c</columns>
        <columns>Email__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Work_State__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operating_Group__c</field>
            <operation>startsWith</operation>
            <value>Care</value>
        </filters>
        <label>Care</label>
    </listViews>
    <listViews>
        <fullName>Neuro</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Salesforce_User_Account__c</columns>
        <columns>Email__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Work_State__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operating_Group__c</field>
            <operation>startsWith</operation>
            <value>Neuro</value>
        </filters>
        <label>Neuro</label>
    </listViews>
    <listViews>
        <fullName>Redwood</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Salesforce_User_Account__c</columns>
        <columns>Email__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Work_State__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operating_Group__c</field>
            <operation>startsWith</operation>
            <value>Red</value>
        </filters>
        <label>RedWood</label>
    </listViews>
    <listViews>
        <fullName>Shaun_Only</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Salesforce_User_Account__c</columns>
        <columns>Email__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Work_State__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Name__c</field>
            <operation>contains</operation>
            <value>j</value>
        </filters>
        <filters>
            <field>Last_Name__c</field>
            <operation>equals</operation>
            <value>gomez</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Shaun&apos;s Only</label>
    </listViews>
</CustomObject>